test-cases/final-dump.save/func_no_types.wybe
pub def double(a) = a*2
